# ai_servant_tg

./: README.md  main.py  pyproject.toml
src/: config.py  main.py
src/text/: tg_message.py
